--- a/package.json
+++ b/package.json
@@ -1,8 +1,29 @@
 {
-  "devDependencies": {
-    "rollup": "^2.42.0"
-  },
   "scripts": {
-    "build": "rollup --config"
-  }
+    "start": "snowpack dev",
+    "build": "snowpack build",
+    "test": "echo \"This template does not include a test runner by default.\" && exit 1",
+    "format": "prettier --write \"src/**/*.js\"",
+    "lint": "prettier --check \"src/**/*.js\""
+  },
+  "dependencies": {
+    "canvas-confetti": "^1.2.0",
+    "snowpack-plugin-terser": "^0.1.0",
+    "terser": "^5.6.1"
+  },
+  "devDependencies": {
+    "@snowpack/plugin-babel": "^2.1.6",
+    "@snowpack/plugin-postcss": "^1.2.1",
+    "autoprefixer": "^9.8.6",
+    "cssnano": "^4.1.10",
+    "postcss": "^8.2.8",
+    "postcss-cli": "^8.3.1",
+    "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.0.5",
+    "snowpack": "^3.0.1",
+    "snowpack-plugin-less": "^1.0.7"
+  },
+  "browserslist": [
+    ">0.1%"
+  ]
 }
