--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "prettier --check \"src/**/*.js\""
   },
   "dependencies": {
+    "postcss-less": "^4.0.1",
     "snowpack-plugin-terser": "^0.1.0",
     "terser": "^5.6.1"
   },
