--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "prettier --check \"src/**/*.js\""
   },
   "dependencies": {
-    "postcss-less": "^4.0.1",
+    "snowpack": "^3.0.1",
     "snowpack-plugin-terser": "^0.1.0",
     "terser": "^5.6.1"
   },
@@ -17,10 +17,12 @@
     "cssnano": "^4.1.10",
     "postcss": "^8.2.8",
     "postcss-cli": "^8.3.1",
+    "postcss-less": "^4.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
-    "snowpack": "^3.0.1",
-    "snowpack-plugin-less": "^1.0.7"
+    "snowpack-plugin-less": "^1.0.7",
+    "snowpack-plugin-terser": "^0.1.0",
+    "terser": "^5.6.1"
   },
   "browserslist": [
     ">0.1%"
