--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,14 @@
         "destination": "/build/index.html"
       }
     ]
+  },
+  "firestore": {
+    "rules": "Y",
+    "indexes": "Y"
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ]
   }
 }
