--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@snowpack/plugin-postcss": "^1.2.1",
     "autoprefixer": "^9.8.6",
     "cssnano": "^4.1.10",
+    "firebase-admin": "^9.5.0",
+    "firebase-functions": "^3.13.2",
     "postcss": "^8.2.8",
     "postcss-cli": "^8.3.1",
     "postcss-less": "^4.0.1",
