--- a/firebase.json
+++ b/firebase.json
@@ -14,12 +14,19 @@
     ]
   },
   "firestore": {
-    "rules": "Y",
-    "indexes": "Y"
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   },
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    ],
+    "source": "functions"
+  },
+  "emulators": {
+    "firestore": {
+      "host": "localhost",
+      "port": "5002"
+    }
   }
 }
