--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "babel-eslint": "^10.1.0",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
